--- a/flutter-build.yaml
+++ b/flutter-build.yaml
@@ -2,6 +2,36 @@ name: Build Flutter APKs & Appbundle
 on: push
 
 jobs:
+  build_documentation: 
+    name: Build Documentation
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Install Flutter SDK
+        uses: subosito/flutter-action@v1
+        with:
+          channel: 'stable'     
+
+      - name: Flutter pub get
+        run: flutter pub get
+
+      - name: Install dartdoc
+        run: flutter pub global activate dartdoc
+
+      - name: Generate documentation
+        run: flutter pub global run dartdoc
+
+      - name: Release the documentation
+        uses: crazy-max/ghaction-github-pages@v3
+        if: success()
+        with:
+          target_branch: documentation
+          build_dir: doc/api
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   # Build APKs
   build_apks:
     name: Build APKs
@@ -35,7 +65,6 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: v${{ steps.project_version.outputs.version_number }}-${{github.run_number}}-apks
           name: "Built Apks ${{ steps.project_version.outputs.version_number }} Build(${{github.run_number}})"
-
 
   # Build Appbundle
   build_appbundle:
