--- a/flutter-build.yaml
+++ b/flutter-build.yaml
@@ -66,19 +66,23 @@ jobs:
       - name: Download apks
         uses: actions/download-artifact@v4
         with:
-          name: publish-artifacts-apks
-          path: build/app/outputs/flutter-apk
+          name: publish-artifacts-apks 
 
       - name: Download appbundle
         uses: actions/download-artifact@v4
         with:
-          name: publish-artifacts-appbundle
-          path: build/app/outputs/bundle/release
+          name: publish-artifacts-appbundle 
+
+      - name: Display structure of downloaded apks
+        run: ls -R build/app/outputs/flutter-apk
+
+      - name: Display structure of downloaded bundle
+        run: ls -R build/app/outputs/bundle/release
 
       - name: Release Binary
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/app/outputs/bundle/release/*.aab, build/app/outputs/flutter-apk/*.apk"
+          artifacts: "build/app/outputs/flutter-apk/*.apk,build/app/outputs/bundle/release/*.aab"
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: v${{ steps.project_version.outputs.version_number }}+${{steps.project_version.outputs.build_number}}-${{github.run_number}}
           name: "Release ${{ steps.project_version.outputs.version_number }}+${{steps.project_version.outputs.build_number}}"
